--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.verbose=true
-sonar.organization=valaxy-011
+sonar.organization=valaxy-011-key
 sonar.projectKey=valaxy-011-key_twitertrend
 sonar.projectName=twitertrend
 sonar.language=java
